[package]
name = "impersonate-rs"
version = "0.1.0"
edition = "2021"
author = "zblurx"
description = "Rusty Impersonate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.0", features = ["derive"] }
obfstr = "0.4.1"

[dependencies.windows-sys]
version = "0.45.0"
features = [
"Win32_Foundation",
"Win32_Security",
"Win32_Storage_FileSystem",
"Win32_System_Com_StructuredStorage",
"Win32_System_Diagnostics_Debug",
"Win32_System_Diagnostics_ToolHelp",
"Win32_System_Threading",
"Win32_System_WindowsProgramming",
"Win32_System_SystemServices",
"Win32_System_Memory",
"Win32_System_Kernel",
"Win32_System_IO",
"Win32_System_Pipes",
"Win32_UI_WindowsAndMessaging",
]