[package]
name = "irs"
description = "IRS - Impersonate process token from SeImpersonate privilege"
version = "1.0.0"
edition = "2021"
authors = ["zblurx <seigneuret.thomas@protonmail.com>", "g0h4n <g0h4n_0@protonmail.com>"]
keywords = ["token", "windows", "win32", "impersonate", "impersonate-rs"]
repository = "https://github.com/zblurx/impersonate-rs"
homepage = "https://github.com/zblurx/impersonate-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = "4.0"
obfstr = "0.4.1"
log = "0.4"
rand = "0.9.2"
env_logger = "0.11.8"
colored = "3"

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_SystemInformation",
]